@@ -108,7 +108,6 @@ EXTRA_DIST= \
 	vmspecific/gnu/bytecodecvssnap/ZipLoader.java \
 	vmspecific/gnu/bytecodecvssnap/dump.java \
 	vmspecific/gnu/bytecodecvssnap/package.html \
-	vmspecific/gnu/classpath/.#VMSystemProperties.java.1.4 \
 	vmspecific/gnu/classpath/Configuration.java.in \
 	vmspecific/gnu/classpath/Unsafe.java \
 	vmspecific/gnu/classpath/VMStackWalker.java \
@@ -222,7 +221,6 @@ EXTRA_DIST= \
 	vmspecific/java/io/VMFile.java \
 	vmspecific/java/io/VMObjectInputStream.java \
 	vmspecific/java/io/VMObjectStreamClass.java \
-	vmspecific/java/lang/.#VMSystem.java.1.1 \
 	vmspecific/java/lang/Runtime.java \
 	vmspecific/java/lang/String.java \
 	vmspecific/java/lang/VMClass.java \
